tests/paczka1/fuzzy1/40209720.err
Error in line 2: LaQ4O A836 69,6
Error in line 13: LaQ4O A333 9,4
Error in line 20: SIa S837 21,8
Error in line 11: FUUbgxJl A836 13,9
Error in line 34: lFAaGCowJ5s S837 69,9
Error in line 35: lFAaGCowJ5s A333 20,5
